
Rounding out the FAQ (so far).  Plus a minor fix to rebuild packages
using mzbuild.
----------------------------------------------------------------------
Thu Dec  4 18:04:57 2003                        Michael Jennings (mej)

Updated debian/ build goop.
----------------------------------------------------------------------
Sat Dec 13 13:01:48 2003                        Michael Jennings (mej)

Fix dependencies.
----------------------------------------------------------------------
Tue Dec 30 19:31:00 2003                        Michael Jennings (mej)

Support building packages inside a chroot jail.
----------------------------------------------------------------------
Wed Dec 31 08:21:47 2003                        Michael Jennings (mej)

Minor fixes.
----------------------------------------------------------------------
Wed Dec 31 16:08:26 2003                        Michael Jennings (mej)

Working on hint and chroot-resync support.
----------------------------------------------------------------------
Sat Jan  3 19:45:10 2004                        Michael Jennings (mej)

Fix rebuild of SRPM's.
----------------------------------------------------------------------
Mon Jan  5 14:33:06 2004                        Michael Jennings (mej)

Added support for instroot init/reset/copy.
----------------------------------------------------------------------
Mon Jan  5 16:16:49 2004                        Michael Jennings (mej)

Update help screens.
----------------------------------------------------------------------
Tue Jan  6 17:20:29 2004                        Michael Jennings (mej)

Added support for setting hints/hint installer from environment.
----------------------------------------------------------------------
Sat Jan 10 10:07:58 2004                        Michael Jennings (mej)

Install BuildRequires and BuildPrereq's in addition to Hints before
building.
----------------------------------------------------------------------