@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: buildtool,v 1.166 2004/01/10 13:40:58 mej Exp $
+# $Id: buildtool,v 1.167 2004/01/15 01:20:06 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -658,7 +658,7 @@ main
     #
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.166 $ created on $Date: 2004/01/10 13:40:58 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.167 $ created on $Date: 2004/01/15 01:20:06 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
@@ -777,7 +777,8 @@ main
         my $locations = $opt_L;
 
         if (-d $locations) {
-            $locations = "/.*/=$locations";
+            $locations = '/.*/=' . $locations;
+            dprint "Got global location \"$locations\".\n";
         } elsif ($locations !~ m,/[^/]+/[\@=],) {
             if (&mkdir($locations, 0775)) {
                 dprint "Created location $locations.\n";
